--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<title>Сказка о Нефилине/title>
+<title>Сказка о Нефилине</title>
 <link rel="stylesheet" href="rocaN.css">
 <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
 <script src="jquery/jquery.min.js"></script>
