--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 	<div class="tittle">
 		<h1>Сказка о Нефилине</h1>
-		<h2>Автор — <a href="http://vk.com/seva_r6">Шевченко Дмитрий</a></h2>
+		<h2>Автор — <a href="http://vk.com/sheva_r6">Шевченко Дмитрий</a></h2>
 	</div>
 </header>
 
